--- a/config/templates/scanning-session-detail-page.html
+++ b/config/templates/scanning-session-detail-page.html
@@ -13,13 +13,13 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="mx-auto d-block">
-                                            <h5 class="text-sm-center mt-2 mb-1">{{object.scanning_session_name}}</h5>
-                                            <hr>
-                                            <div class="card-text text-sm-center">
-                                                <a href="{% url 'delete-session-down-server' object.pk %}"><i class="fa fa-desktop"></i>Remove Down/Unavailable IPs</a>
-                                                <a href="{% url 'update-session' object.pk %}"><i class="fa fa-edit pr-1"></i>Edit</a>
-                                                <a href="{% url 'delete-session' object.pk %}"><i class="fa fa-trash-o pr-1"></i>Delete</a>
-                                            </div>
+                                        <h5 class="text-sm-center mt-2 mb-1">{{object.scanning_session_name}}</h5>
+                                        <hr>
+                                        <div class="card-text text-sm-center">
+                                            <a href="{% url 'delete-session-down-server' object.pk %}"><i class="fa fa-desktop"></i>Remove Down/Unavailable IPs</a>
+                                            <a href="{% url 'update-session' object.pk %}"><i class="fa fa-edit pr-1"></i>Edit</a>
+                                            <a href="{% url 'delete-session' object.pk %}"><i class="fa fa-trash-o pr-1"></i>Delete</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -106,16 +106,16 @@
                                     {{network_scanning_form.scan_type}}
                                 </div>
                                 <div class="form-group">
-                                    <label>{{network_scanning_form.what_to_scan.label}}: (If you chose 'Port Status', use this field.)</label>
+                                    <label>{{network_scanning_form.what_to_scan.label}}: (If you chose 'Server Status', use this field.)</label>
                                     {{network_scanning_form.what_to_scan}}
                                 </div>
                                 <div class="form-group">
-                                    <label>{{network_scanning_form.port_number.label}}: (If you chose 'Server Status', use this field.) </label>
+                                    <label>{{network_scanning_form.port_number.label}}: (If you chose 'Port Status', use this field.) </label>
                                     {{network_scanning_form.port_number}}
                                 </div>
                                 <div class="form-group">
-                                    <label>{{network_scanning_form.thread_count.label}}: </label>
-                                    {{network_scanning_form.thread_count}}
+                                    <label>{{network_scanning_form.number_of_threads.label}}: </label>
+                                    {{network_scanning_form.number_of_threads}}
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30" onclick="alert('Feel free to close the browser or this tab but please don\'t close the terminal or turn off your PC until scanning is finished. To stop this scan, use \'Ctrl + c\' in your terminal.')">Scan</button>
                                 {% csrf_token %}
